replace fa > fi

--- a/src/main/resources/static/css/overrides.css
+++ b/src/main/resources/static/css/overrides.css
@@ -556,7 +556,11 @@ textarea:invalid {
 }
 
 .fi {
-    display: inline-flex;
+    line-height: 1;
+}
+
+.fi:before {
+    vertical-align: middle;
 }
 
 .introjs-tooltip {
