--- a/src/main/resources/templates/admin/forms/includes/workspace.html
+++ b/src/main/resources/templates/admin/forms/includes/workspace.html
@@ -130,10 +130,10 @@
                         </div>
                         <input id="spotComment" name="comment" type="hidden">
                         <button id="hideSpotButton" type="button" class="btn btn-sm btn-dark float-start" data-bs-dismiss="modal">
-                            <i class="fa-solid fa-times"></i>
+                            <i class="fi fi-rr-cross-small"></i>
                         </button>
                         <button id="save-spot-button" th:data-es-signrequest-id="${form.id}" type="button" class="btn btn-sm btn-dark float-end">
-                            <i class="fa-solid fa-save"></i>
+                            <i class="fi fi-rr-disk"></i>
                         </button>
                     </form>
                 </div>
