--- a/src/main/resources/templates/admin/roles-managers.html
+++ b/src/main/resources/templates/admin/roles-managers.html
@@ -52,7 +52,7 @@
                                         <div class="text-center">
                                             <button id="saveButton" title="Enregistrer" type="submit"
                                                     class="btn btn-sm btn-success">
-                                                <i class="fa-solid fa-save"></i>
+                                                <i class="fi fi-rr-disk"></i>
                                             </button>
                                         </div>
                                     </td>
