--- a/src/main/resources/templates/user/users/shares/update.html
+++ b/src/main/resources/templates/user/users/shares/update.html
@@ -26,7 +26,7 @@
             <div class="fixed-action-btn">
                 <a title="Enregistrer" type="button" onclick="$('#shareForm').submit()"
                     class="btn-floating btn-lg bg-success">
-                    <i class="fa-solid fa-save fa-2xl"></i>
+                    <i class="fi fi-rr-disk fa-2xl"></i>
                 </a>
             </div>
             <div class="alert border-secondary-subtle col-lg-11">
