--- a/src/main/resources/templates/user/wizard/wiz-new-step.html
+++ b/src/main/resources/templates/user/wizard/wiz-new-step.html
@@ -18,7 +18,7 @@
             </div>
             <div class="bs-stepper-line"></div>
             <div class="step" data-bs-target="#test-l-3">
-                <span class="bs-stepper-circle"><i class="fa-solid fa-save"></i></span>
+                <span class="bs-stepper-circle"><i class="fi fi-rr-disk"></i></span>
                 <span class="bs-stepper-label">Sauvegarde</span>
             </div>
             <div class="bs-stepper-line"></div>
@@ -152,7 +152,7 @@
         <i class="fa-solid fa-plus"></i> Enregistrer cette étape
     </button>
     <button formnovalidate id="end-workflow-sign" name="end-workflow-sign" value="true" th:if="${signBook.liveWorkflow.liveWorkflowSteps.size() > 0}" type="button" class="btn btn-success float-end m-1">
-        <i class="fa-solid fa-save"></i> Terminer et annoter
+        <i class="fi fi-rr-disk"></i> Terminer et annoter
     </button>
     <button formnovalidate id="end-workflow-sign-start" name="end-workflow-sign" value="true" th:if="${signBook.liveWorkflow.liveWorkflowSteps.size() > 0}" type="button" class="btn btn-success float-end m-1">
         <i class="fa-solid fa-paper-plane"></i> Terminer et envoyer
