--- a/src/main/resources/templates/user/workflows/show.html
+++ b/src/main/resources/templates/user/workflows/show.html
@@ -63,7 +63,7 @@
                         <input id="sendAlertToAllRecipients" type="checkbox" class="form-check-input" th:field="${workflow.sendAlertToAllRecipients}"/>
                         <label for="sendAlertToAllRecipients" class="form-check-label">Avertir tous les participants à la fin du circuit</label>
                     </div>
-                    <button title="Enregistrer" type="submit" class="btn btn-success mt-2"><i class="fa-solid fa-save"></i></button>
+                    <button title="Enregistrer" type="submit" class="btn btn-success mt-2"><i class="fi fi-rr-disk"></i></button>
                 </form>
             </div>
             <div class="alert alert-light col-lg-10 mx-auto mb-1">
