--- a/src/main/resources/templates/user/wizard/wiz-end.html
+++ b/src/main/resources/templates/user/wizard/wiz-end.html
@@ -12,7 +12,7 @@
     </div>
     <div class="bs-stepper-line"></div>
     <div class="step" data-bs-target="#test-l-3">
-        <span class="bs-stepper-circle bg-success"><i class="fa-solid fa-save"></i></span>
+        <span class="bs-stepper-circle bg-success"><i class="fi fi-rr-disk"></i></span>
         <span class="bs-stepper-label">Sauvegarde</span>
     </div>
     <div class="bs-stepper-line"></div>
