--- a/src/main/resources/templates/user/wizard/wiz-fast-sign.html
+++ b/src/main/resources/templates/user/wizard/wiz-fast-sign.html
@@ -146,7 +146,7 @@
     <button type="button" id="send-draft-button" class="btn btn-success">
         <div class="send-form-spinner spinner-border d-none" style="width: 1rem; height: 1rem;">
         </div>
-        <i class="fa-solid fa-save"></i> Placer des champs signature ou annoter
+        <i class="fi fi-rr-disk"></i> Placer des champs signature ou annoter
     </button>
     <button type="button" id="send-pending-button" class="btn btn-success">
         <div class="send-form-spinner spinner-border d-none" style="width: 1rem; height: 1rem;">
