--- a/src/main/resources/templates/user/wizard/wiz-save-workflow.html
+++ b/src/main/resources/templates/user/wizard/wiz-save-workflow.html
@@ -12,7 +12,7 @@
     </div>
     <div class="bs-stepper-line"></div>
     <div class="step active" data-bs-target="#test-l-3">
-        <span class="bs-stepper-circle"><i class="fa-solid fa-save"></i></span>
+        <span class="bs-stepper-circle"><i class="fi fi-rr-disk"></i></span>
         <span class="bs-stepper-label">Sauvegarde</span>
     </div>
     <div class="bs-stepper-line"></div>
@@ -43,7 +43,7 @@
 <div class="modal-footer">
     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
     <button id="save-workflow" type="button" class="btn btn-success float-end">
-        <i class="fa-solid fa-save"></i> Enregistrer le circuit
+        <i class="fi fi-rr-disk"></i> Enregistrer le circuit
     </button>
 </div>
 </html>
