--- a/src/main/resources/templates/user/wizard/wiz-setup-workflow.html
+++ b/src/main/resources/templates/user/wizard/wiz-setup-workflow.html
@@ -17,7 +17,7 @@
         </div>
         <div class="bs-stepper-line"></div>
         <div class="step active" data-bs-target="#test-l-3">
-            <span class="bs-stepper-circle"><i class="fa-solid fa-save"></i></span>
+            <span class="bs-stepper-circle"><i class="fi fi-rr-disk"></i></span>
             <span class="bs-stepper-label">Sauvegarde</span>
         </div>
         <div class="bs-stepper-line"></div>
@@ -36,7 +36,7 @@
     <button type="button" id="send-draft-button" class="btn btn-success" name="draft" value="true">
         <div class="send-form-spinner spinner-border d-none" style="width: 1rem; height: 1rem;">
         </div>
-        <i class="fa-solid fa-save"></i> Placer des champs signature ou annoter
+        <i class="fi fi-rr-disk"></i> Placer des champs signature ou annoter
     </button>
     <button type="button" id="send-pending-button" class="btn btn-success">
         <div class="send-form-spinner spinner-border d-none" style="width: 1rem; height: 1rem;">
